--- a/paths.txt.example
+++ b/paths.txt.example
@@ -1,3 +1,5 @@
-Downloaded Facebook Messages path (e.g. ~/Documents/messages.htm): 
+Downloaded Facebook Messages path (e.g. Users/[user]/Documents/messages.htm): 
 
-Location to save message data (e.g. ~/Documents/data.txt): 
+Location to save all message data (e.g. Users/[user]/Documents/facebook_data/data.txt): 
+[None: many files may be created here, so it would be best to create
+a new directory. However, above link to the specific 'data.txt' file]
