--- a/paths.txt.example
+++ b/paths.txt.example
@@ -1,5 +1,5 @@
 Downloaded Facebook Messages path (e.g. Users/[user]/Documents/messages.htm): 
 
 Location to save all message data (e.g. Users/[user]/Documents/facebook_data/data.txt): 
-[None: many files may be created here, so it would be best to create
+[Note: many files may be created here, so it would be best to create
 a new directory. However, above link to the specific 'data.txt' file]
