--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ test.py
 facebook*
 *data*
 temp.py
+testing
 
 
 #Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
