Add many license.txt files and update readme
With this commit I've done the best of my ability to give credit to
all libraries that are used in this project

--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,6 @@ testing
 !msgs_over_time.html
 tmp.py
 
-
 conversation_data
 output
 wordClouds
@@ -138,9 +137,6 @@ data.txt
 !cloud_fg.bmp
 !whale.png
 
-# License
-!LICENSE.txt
-
 # Template html files
 !convo.html
 !graphs.html
@@ -151,3 +147,7 @@ data.txt
 !convo.css
 !bootstrap.min.css
 !home-page.css
+
+# License
+!LICENSE.txt
+!credit.txt
