Add support for new conversation page, unfinished
Added:
-HTML, CSS, JS for new page
-Library dependencies and licenses
-Modified python code to account  for changes
-Delete old convo.html/css

TODO:
-Style colors and font

--- a/.gitignore
+++ b/.gitignore
@@ -138,15 +138,19 @@ data.txt
 !whale.png
 
 # Template html files
-!convo.html
 !graphs.html
 !index.html
+!table.html
 
 # static css files
 !graphs.css
-!convo.css
 !bootstrap.min.css
 !home-page.css
+!table.css
+
+# Resources for web pages
+!down_arrow.png
+!up_arrow.png
 
 # License
 !LICENSE.txt
